# news-feed

./: .gitignore  Dockerfile  Makefile  app.py  client.py  docker-compose.yaml  gpt.py  model.py  pyproject.toml  server.py  settings.py  start.sh
